--- a/locale/en_ZA/LC_MESSAGES/api.po
+++ b/locale/en_ZA/LC_MESSAGES/api.po
@@ -1,3 +1,15 @@
+msgid ""
+msgstr ""
+"Project-Id-Version: River 0.4\n"
+"Report-Msgid-Bugs-To: charl@ushahidi.com\n"
+"POT-Creation-Date: 2011-08-29 00:00+0000\n"
+"PO-Revision-Date: 2011-08-29 00:00+0000\n"
+"Last-Translator: Charl van Niekerk <charl@ushahidi.com>\n"
+"Language-Team: Charl van Niekerk <charl@ushahidi.com>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+
 msgid "The password is incorrect for this user."
 msgstr ""
 
