--- a/locale/en_ZA/LC_MESSAGES/api.po
+++ b/locale/en_ZA/LC_MESSAGES/api.po
@@ -1,62 +1,66 @@
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: River 0.4\n"
-"Report-Msgid-Bugs-To: charl@ushahidi.com\n"
+"Project-Id-Version: riverid\n"
+"Report-Msgid-Bugs-To: http://github.com/ushahidi/riverid/issues\n"
 "POT-Creation-Date: 2011-08-29 00:00+0000\n"
-"PO-Revision-Date: 2011-08-29 00:00+0000\n"
+"PO-Revision-Date: 2011-09-05 15:10+0300\n"
 "Last-Translator: Charl van Niekerk <charl@ushahidi.com>\n"
 "Language-Team: Charl van Niekerk <charl@ushahidi.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: en_ZA\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 msgid "The password is incorrect for this user."
-msgstr ""
+msgstr "The password is incorrect for this user."
 
 msgid "RiverID Email Change"
-msgstr ""
+msgstr "RiverID Email Change"
 
 msgid "The old password is incorrect for this user."
-msgstr ""
+msgstr "The old password is incorrect for this user."
 
 msgid "This email address has already been confirmed."
-msgstr ""
+msgstr "This email address has already been confirmed."
 
 msgid "The token is not valid for this email address."
-msgstr ""
+msgstr "The token is not valid for this email address."
 
 msgid "RiverID: Please confirm your password change."
-msgstr ""
+msgstr "RiverID: Please confirm your password change."
 
 msgid "RiverID: Please confirm your email address."
-msgstr ""
+msgstr "RiverID: Please confirm your email address."
 
 msgid "The session is not valid for this account."
-msgstr ""
+msgstr "The session is not valid for this account."
 
 msgid "No password change has been requested for this email address."
-msgstr ""
+msgstr "No password change has been requested for this email address."
 
 msgid "The account is disabled."
-msgstr ""
+msgstr "The account is disabled."
 
 msgid "The session has already been ended."
-msgstr ""
+msgstr "The session has already been ended."
 
 msgid "The email address does not appear to be registered."
-msgstr ""
+msgstr "The email address does not appear to be registered."
 
 msgid "Please provide a valid email address."
-msgstr ""
+msgstr "Please provide a valid email address."
 
 msgid "Please provide a password between 8 and 128 characters in length."
-msgstr ""
+msgstr "Please provide a password between 8 and 128 characters in length."
 
 msgid "Please provide a valid session identifier."
-msgstr ""
+msgstr "Please provide a valid session identifier."
 
 msgid "Please provide a valid token."
-msgstr ""
+msgstr "Please provide a valid token."
 
 msgid "Please provide a valid callback function name."
-msgstr ""
+msgstr "Please provide a valid callback function name."
+
