--- a/locale/es_CO/LC_MESSAGES/api.po
+++ b/locale/es_CO/LC_MESSAGES/api.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: riverid\n"
 "Report-Msgid-Bugs-To: http://github.com/ushahidi/riverid/issues\n"
 "POT-Creation-Date: 2011-08-29 00:00+0000\n"
-"PO-Revision-Date: 2011-08-29 15:26+0000\n"
-"Last-Translator: jhcaiced <jhcaiced@gmail.com>\n"
+"PO-Revision-Date: 2011-09-05 15:08+0300\n"
+"Last-Translator: Charl van Niekerk <charl@ushahidi.com>\n"
 "Language-Team: Spanish (Colombia) (http://www.transifex.net/projects/p/riverid/team/es_CO/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,8 +27,7 @@ msgid "This email address has already been confirmed."
 msgstr "Esta dirección de correo electrónico ya ha sido confirmada."
 
 msgid "The token is not valid for this email address."
-msgstr ""
-"El indicio de clave no es válido para esta dirección de correo electrónico."
+msgstr "El indicio de clave no es válido para esta dirección de correo electrónico."
 
 msgid "RiverID: Please confirm your password change."
 msgstr "RiverID: Por favor confirme el cambio de su clave."
@@ -40,9 +39,7 @@ msgid "The session is not valid for this account."
 msgstr "La sesión no es válida para esta cuenta de usuario."
 
 msgid "No password change has been requested for this email address."
-msgstr ""
-"No se ha solicitado cambio de clave para esta dirección de correo "
-"electrónico."
+msgstr "No se ha solicitado cambio de clave para esta dirección de correo electrónico."
 
 msgid "The account is disabled."
 msgstr "La cuenta está desactivada."
@@ -67,5 +64,4 @@ msgstr "Por favor ingrese un indicio de sesión válido."
 
 msgid "Please provide a valid callback function name."
 msgstr "Por favor ingrese un nombre de función válido."
-
 
