--- a/locale/jp_JP/LC_MESSAGES/api.po
+++ b/locale/jp_JP/LC_MESSAGES/api.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: riverid\n"
 "Report-Msgid-Bugs-To: http://github.com/ushahidi/riverid/issues\n"
 "POT-Creation-Date: 2011-08-29 00:00+0000\n"
-"PO-Revision-Date: 2011-09-01 13:22+0000\n"
-"Last-Translator: higa4 <higa432@gmail.com>\n"
+"PO-Revision-Date: 2011-09-05 15:08+0300\n"
+"Last-Translator: Charl van Niekerk <charl@ushahidi.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.net/projects/p/riverid/team/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -64,5 +64,4 @@ msgstr "正しいトークンを入力してください。"
 
 msgid "Please provide a valid callback function name."
 msgstr "正しいcallback function 名を入力してください。"
-
 
