--- a/locale/nl_NL/LC_MESSAGES/api.po
+++ b/locale/nl_NL/LC_MESSAGES/api.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: riverid\n"
 "Report-Msgid-Bugs-To: http://github.com/ushahidi/riverid/issues\n"
 "POT-Creation-Date: 2011-08-29 00:00+0000\n"
-"PO-Revision-Date: 2011-08-29 12:33+0000\n"
-"Last-Translator: charl <charl@ushahidi.com>\n"
+"PO-Revision-Date: 2011-09-05 15:07+0300\n"
+"Last-Translator: Charl van Niekerk <charl@ushahidi.com>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.net/projects/p/riverid/team/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,8 +54,7 @@ msgid "Please provide a valid email address."
 msgstr "Verschaf alstublieft een geldig e-mailadres."
 
 msgid "Please provide a password between 8 and 128 characters in length."
-msgstr ""
-"Verschaf alstublieft een wachtwoord die tussen 8 en 128 tekens lang zijn."
+msgstr "Verschaf alstublieft een wachtwoord die tussen 8 en 128 tekens lang zijn."
 
 msgid "Please provide a valid session identifier."
 msgstr "Verschaf alstublieft geldige sessie-identificatie."
@@ -65,5 +64,4 @@ msgstr "Verschaf alstublieft een geldige kaart."
 
 msgid "Please provide a valid callback function name."
 msgstr "Verschaf alstublieft een geldige callback functie naam."
-
 
